--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar-list {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  background-color: #333;
+  padding: 10px;
+}
+
+.navbar-list li {
+  list-style: none;
+  margin: 0 10px;
+}
+
+.navbar-list a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.navbar-list a:hover {
+  text-decoration: underline;
+}
+
+.cart-counter {
+  position: absolute;
+  top: -7px;
+  right: -7px;
+  background-color: #ff5f5f;
+  color: #fff;
+  font-size: 0.7rem;
+  width: 1.2rem;
+  height: 1.2rem;
+  border-radius: 50%;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-cart a {
+  display: flex;
+  align-items: center;
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-cart a svg {
+  font-size: 1.5rem;
+  margin-right: 10px;
+}
+
+button {
+  background-color: transparent;
+  border: 1px solid #333;
+  color: #ffffff;
+  padding: 10px;
+
+}
+
+button:hover{
+  background-color: #ffffff;
+  color: #000000;
+  cursor: pointer;
 }
