--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
+nav {
+  display: flex;
+  align-items: center;
+  height: fit-content;
+}
+
 .navbar-list {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
   background-color: #333;
-  padding: 10px;
+  padding: 31px;
 }
 
 .navbar-list li {
@@ -18,6 +27,10 @@
 
 .navbar-list a:hover {
   text-decoration: underline;
+}
+
+.navbar-icon {
+  margin-right: 10px;
 }
 
 .cart-counter {
@@ -54,7 +67,7 @@ button {
 
 }
 
-button:hover{
+button:hover {
   background-color: #ffffff;
   color: #000000;
   cursor: pointer;
