--- a/src/App.css
+++ b/src/App.css
@@ -48,13 +48,14 @@ nav {
   justify-content: center;
 }
 
-.navbar-cart a {
+.cart-icon {
   display: flex;
   align-items: center;
   position: relative;
 }
 
-.navbar-cart a svg {
+.cart-icon svg {
+  color: #fff;
   font-size: 1.5rem;
   margin-right: 10px;
 }
