--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 nav {
+  height: 60px;
   display: flex;
   align-items: center;
-  height: fit-content;
+  padding-bottom: 30px;
 }
 
 .navbar-list {
@@ -10,8 +11,8 @@ nav {
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: #333;
-  padding: 31px;
+  background-color: #1a1a1a;
+  padding: 0 40px;
 }
 
 .navbar-list li {
@@ -23,6 +24,7 @@ nav {
   color: #fff;
   text-decoration: none;
   font-weight: bold;
+  font-size: 1rem;
 }
 
 .navbar-list a:hover {
@@ -31,17 +33,21 @@ nav {
 
 .navbar-icon {
   margin-right: 10px;
+  margin-top: -10px;
+  height: 30px;
+  width: 30px;
 }
+
 
 .cart-counter {
   position: absolute;
-  top: -7px;
-  right: -7px;
+  top: -10px;
+  right: -10px;
   background-color: #ff5f5f;
   color: #fff;
-  font-size: 0.7rem;
-  width: 1.2rem;
-  height: 1.2rem;
+  font-size: 0.8rem;
+  width: 1.5rem;
+  height: 1.5rem;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -60,16 +66,29 @@ nav {
   margin-right: 10px;
 }
 
-button {
-  background-color: transparent;
-  border: 1px solid #333;
-  color: #ffffff;
-  padding: 10px;
-
+.Button {
+  text-decoration: none;
+  border-radius: 25px;
+  margin: 0 30px;
+  width: auto;
+  padding: 12px 24px;
+  font-size: 1rem;
+  background: #8C30F5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFFFFF;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.3s ease;
 }
 
-button:hover {
-  background-color: #ffffff;
-  color: #000000;
-  cursor: pointer;
+.Button:hover {
+  background: #5f0cff;
+}
+
+span {
+  color: black;
+  text-decoration: none;
 }
