--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,62 +1,47 @@
-.CardItem {
-    width: 150px;
-    padding: 30px;
-    margin: 30px;
-    font-size: 10px;
-    background-color: snow;
-    border: 1px solid #e1e1e1;
-    border-radius: 10px;
+.card {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    margin-left: 16px;
+    margin-right: 16px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.Header {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-    border-radius: 25px;
+.card-img-top {
+    height: 250px;
+    object-fit: contain;
+    max-width: 100%;
 }
 
-.ItemHeader {
-    display: flex;
-    justify-content: center;
+.card-body {
+    padding: 1.5rem;
+    text-align: center;
 }
 
-.Info {
-    font-size: 12px;
-    display: flex;
-    justify-content: space-around;
+.card-title {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
 }
 
-.ButtonDetail {
-    width: auto;
-    padding: 12px;
-    font-size: 8px;
-    background: #8C30F5;
-    border-radius: 8px;
-    flex: none;
-    display: flex;
-    order: 1;
-    align-self: center;
-    flex-grow: 0;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    color: #FFFFFF;
+.card-text {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+}
+
+.btn-primary {
+    background-color: #222;
     border: none;
-    border-style: none;
-    cursor: pointer;
-    outline: inherit;
+    border-radius: 20px;
+    color: #fff;
+    font-size: 1rem;
+    padding: 0.75rem 1.5rem;
+    text-transform: uppercase;
+    transition: background-color 0.2s ease;
 }
 
-.ItemImg {
-    width: 200px;
-    height: 200px;
-}
-
-.ItemFooter {
-    display: flex;
-    justify-content: center;
+.btn-primary:hover {
+    background-color: #444;
 }
