--- a/src/components/Productos/Productos.css
+++ b/src/components/Productos/Productos.css
@@ -4,11 +4,25 @@
 }
 
 .dropdown-toggle {
-    background-color: #fff;
-    color: black;
-    border: 1px solid #ccc;
-    padding: 10px;
-    cursor: pointer;
+  text-decoration: none;
+  border-radius: 25px;
+  margin: 0 30px;
+  width: auto;
+  padding: 12px 24px;
+  font-size: 1rem;
+  background: #8C30F5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFFFFF;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.3s ease;
+}
+
+.dropdown-toggle:hover {
+  background: #5f0cff;
 }
 
 .dropdown-menu {
